# criu-container-migration-research

./: .gitignore  LICENSE  LICENSE-DATA  README.md  clm.py  pyproject.toml
clm/: analysis_pipeline.py  batching.py  cli.py
config/: analysis.yaml  analysis_paper.yaml  env.example.yaml
docs/: README.md  downtime_segments.md  measurement_hygiene.md  metrics_reference.md  paper_measurement_campaign.md  postcopy_workflow.md  precopy_workflow.md  research_workflow.md  scenario_workbook.xlsx  shared_storage_nfs.md  workload_scenarios.md
docs/archive/: downtime_anomaly_analysis_2026-03.md  downtime_root_cause_analysis_2026-03-08.md  implementation_plan_history.md  initial_measurement_campaign.md  known_issues_history.md  postcopy_freeze_forensics_2026-07-16.md  postcopy_idle_forensics_2026-03-09.md  postcopy_tuning_2026-03-10.md  precopy_tuning_2026-03-22.md  precopy_tuning_2026-03-25.md  segmented_plot_request_note.md
scripts/: analyze_measurement_data.py  build_runc_bundle_from_docker_image.sh  collect_downtime_forensics_monitor.sh  collect_hostinfo_dest.sh  collect_hostinfo_monitor.sh  collect_hostinfo_source.sh  migrate_postcopy_lazy_pages_vip_cutover.sh  migrate_precopy_vip_cutover.sh  patch_runc_bundle_for_criu.sh  restore_runc_bundle_baseline.sh
tests/: test_analysis_pipeline.py  test_analyze_measurement_data.py  test_batching.py  test_cli_load_profiles.py  test_cli_preflight_repo_sync.py  test_cli_progress.py  test_cli_run_migration.py  test_monitor_downtime_semantics.py
tools/: analyze.py  plots.py
tools/monitor/: monitor.py
workload/flask_app/: app.py
(+299 files in other folders)
